# hyperide

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
crates/htmx-headers/: Cargo.toml  README.md
crates/htmx-headers/src/: lib.rs
crates/hyperide-macro/: Cargo.toml  README.md
crates/hyperide-macro/src/: lib.rs
examples/server-demo/: .env.example  Cargo.toml  README.md  build.rs
examples/server-demo/.sqlx/: query-2b0dde313bb637376981dfc17f89f280c7f2e3a0fb7e7906d057d3c54d609a57.json  query-2bf51672a0478d255c4faa5f9cd0ef5a7e1ade942bd170a80598a5563189a31f.json  query-9a60ae96398dc07faf7360c43ffdbae23577151585dfea78e60dc4f72a49288b.json  query-c6c14ffe86202f30d20d452e1ec68f7545e349da31ee3efc45c2f66004f83c01.json  query-d18fa7c69aa257e61657cc0a2da89909450197be86e3e613ae86c5ecacc7a39f.json
examples/server-demo/migrations/: 1_todo.sql  1_todos.sql
examples/server-demo/src/: main.rs
examples/serverless-demo/: Cargo.toml  build.rs  tailwind.config.js  vercel.json
examples/serverless-demo/api/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: _hyperscript.min.js  attr.rs  axum.rs  htmx.rs  hyper.rs  hyperscript.rs  lib.rs  tailwind.rs  vercel.rs  view.rs
