[package]
name = "hyperide"
authors = ["Lucille L. Blumire <lucy@llblumire.co.uk>"]
version = "0.0.5"
edition = "2021"
description = "Builds strings from embedded HTML in Rust"
license = "MIT"
repository = "https://github.com/LLBlumire/hyperide"
readme = "README.md"
keywords = ["rsx", "jsx", "html", "macro", "rstml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperide-macro = { path = "crates/hyperide-macro" }
vercel_runtime = "1.0.2"
url = "2.4.0"
http = "0.2.9"
axum = "0.6.19"
tower-service = "0.3.2"
html-escape = "0.2.13"
headers = "0.3.8"

[dev-dependencies]
vercel_runtime = "1.0.2"
tokio = "1.29.1"


[workspace]
members = [".", "crates/hyperide-macro", "crates/htmx-headers", "examples/serverless-demo", "examples/server-demo"]
