[package]
name = "hyperide-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rstml = { git = "https://github.com/rs-tml/rstml" }
syn = "2.0.23"
quote = "1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.63"