[package]
name = "hyperide-macro"
authors = ["Lucille L. Blumire <lucy@llblumire.co.uk>"]
version = "0.0.4"
edition = "2021"
description = "Builds strings from embedded HTML in Rust"
license = "MIT"
repository = "https://github.com/LLBlumire/hyperide"
readme = "README.md"
keywords = ["rsx", "jsx", "html", "macro", "rstml"]

[lib]
proc-macro = true

[dependencies]
rstml = "0.11.0"
syn = { version = "2.0.23" }
quote = "1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.63"
proc-macro-crate = "1.3.1"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
hyperide = { path = "../.." }