[package]
name = "server-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
hyperide = { path = "../.." }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1", features = [] }
tower-livereload = "0.8.0"

[build-dependencies]
hyperide = { path = "../.." }
